# Galaxy-JEPA

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  KICKOFF.md  Makefile  PROJECT_PLAN.md  README.md  TODO.md  galaxy-jepa-scratchpad.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
artifacts/: _fetch.py  _get_targets.py  _inspect.py  _petro_dist.py  _pull_status.py  _sciserver_auth.py  fidelity_arrays.npz  fidelity_test.py  sciserver_cut.py  sciserver_driver.py  sciserver_native_test.py  sciserver_pull.py  sciserver_stamp_dump.py
artifacts/q_sweep_n100/: metrics.csv  readout.txt
configs/: pretrain.yaml  probe.yaml
docs/: architecture-buildout.md  architecture.md  embedding-explorer-build.md  embedding-explorer.md  masking.md  probing-harness-design.md  related-work.md
docs/spec/: callbacks.md  config.md  data.md  encoder.md  escape-hatches.md  gates.md  objectives.md  splits.md  testing.md  validation.md
scripts/: README.md
src/galaxy_jepa/: __init__.py  harness.py  vertical_slice.py
src/galaxy_jepa/callbacks/: __init__.py  collapse.py
src/galaxy_jepa/core/: __init__.py  config.py  encoder.py  gates.py
src/galaxy_jepa/data/: __init__.py  bbox.py  cache.py  contact_sheet.py  dataset.py  manifest.py  metadata.py  orchestrate.py  pull.py  q_sweep.py  sanity.py  sciserver.py  sources.py  splits.py  transforms.py
src/galaxy_jepa/eval/: __init__.py  embed.py  figures.py
src/galaxy_jepa/masking/: __init__.py  blocks.py
src/galaxy_jepa/models/: __init__.py  vit.py
src/galaxy_jepa/objectives/: __init__.py  jepa.py
src/galaxy_jepa/probing/: __init__.py  config.py  controls.py  entanglement.py  extract.py  gates.py  ladder.py  logistic.py  matching.py  mlp.py  nulls.py  run.py  uncertainty.py
src/galaxy_jepa/training/: __init__.py
tests/: conftest.py  test_collapse_effective_rank.py  test_config.py  test_data_bbox.py  test_data_cache.py  test_data_contact_sheet.py  test_data_metadata.py  test_data_orchestrate.py  test_data_pipeline.py  test_data_q_sweep.py  test_data_sanity.py  test_data_sciserver.py  test_data_splits.py  test_data_transforms.py  test_encoder.py  test_gates.py  test_gz2_no_debiased.py  test_harness.py  test_import.py  test_invariants_stubs.py  test_masking_blocks.py  test_models_vit.py  test_objectives_jepa.py  test_probing_cascade_units.py  test_probing_eval.py  test_probing_ladder.py  test_probing_nulls.py  test_vertical_slice.py
tests/fixtures/: generate.py
