[project]
name = "galaxy-jepa"
version = "0.0.0"
description = "Label-free galaxy representation learning with an I-JEPA; Galaxy Zoo labels used only to name and test directions (nameability ladder + uncertainty geometry). v2 of Galaxy-Zoo-Classifier."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "malachy" }]

# Core dependencies. torch backs the Encoder Protocol + frozen-state checks
# (core/encoder.py); pydantic backs the typed config base + provenance stamp
# (core/config.py). See docs/architecture.md "Sequencing".
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "pydantic>=2",
    "torch>=2",
]

[project.optional-dependencies]
# Populated in later phases; declared here so the layout is visible.
data = ["astropy>=6", "astroquery", "galaxy-datasets", "matplotlib>=3.8", "pillow"]
# The frozen-probe read-out + gut-check figures (probing/, eval/): sklearn for the
# L2-logistic probe + ROC-AUC, umap-learn for the embedding scatter.
eval = ["scikit-learn>=1.3", "umap-learn>=0.5", "matplotlib>=3.8"]
dev = ["pytest>=8", "ruff>=0.6", "pre-commit>=3.8", "hypothesis>=6", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxy_jepa"]

[tool.uv]
# uv manages the project environment; see .devcontainer for the pinned setup.

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# `artifacts/` holds one-off investigation scripts (the fidelity / SciServer / petroRad
# provenance trail referenced in docs/spec/data.md) — deliberately terse, not package
# code. Excluded from lint, mirroring mypy's `files = ["src"]` scoping; `src` + `tests`
# remain fully linted.
extend-exclude = ["artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]

[[tool.mypy.overrides]]
# Astronomy libraries ship no type stubs (no py.typed); ignore their missing imports
# rather than littering call sites with per-line ignores. `requests` is the same case
# (its stubs live in the separate `types-requests` package, not vendored here) and is
# imported lazily in data/metadata.py + data/sources.py for the SDSS REST pulls.
module = [
    "astropy.*",
    "astroquery.*",
    "galaxy_datasets.*",
    "matplotlib.*",
    "requests.*",
    "sklearn.*",
    "umap.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
# Tiers (docs/spec/testing.md). Unmarked = the fast unit gate; `invariant` runs in
# the gate too. `integration`/`e2e`/`gpu`/`slow` are guarded so the fast suite stays
# fast. The default CI selection excludes integration/e2e/gpu.
markers = [
    "invariant: science-protecting property/invariant test (merge-blocking)",
    "integration: component-seam test on a fixture (CPU, PR stage)",
    "e2e: tiny end-to-end run (GPU/slow; nightly or `make e2e`)",
    "gpu: requires a GPU",
    "slow: not part of the fast gate",
]
